--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -8,9 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#FFC0CB</color>
-    <color name="hot_pink">#FF69b4</color>
+    <color name="hot_pink">#E7B1A5</color>
     <color name="transparent">#0000ffff</color>
     <color name="dark_pink">#C71585</color>
     <color name="pale_pink">#DB7093</color>
     <color name="red">#FF0000</color>
+    <color name="blue">#1D4E89</color>
 </resources>
